[FIX] Prevent logo div overlap of phplm. Fix admin button backgrounds.

--- a/mods/trunk/themes/kubrick/styles/kubrick.css
+++ b/mods/trunk/themes/kubrick/styles/kubrick.css
@@ -279,7 +279,6 @@ div#sioptions  {
 	margin-left: 40px}
 
 #sioptionscentered {
-	height: 176px;
 	text-align: center;
 	/*margin-left: 40px;*/
 	min-width: 800px}
@@ -2369,10 +2368,10 @@ table.default td {
 
 a.admbox {
 	border: 1px solid #AAAAAA;
-	background-color: #a8cce2}
+	background: #a8cce2 center no-repeat}
 
 a.admbox:hover, a.admbox:focus, a.admbox:active  {
-	background-color: #B2B2B2;
+	background: #B2B2B2 center no-repeat;
 	border: 1px solid #292929}
 
 a.admbox.off {
